# shellbot2

./: README.md  pyproject.toml
scripts/: start_daemon.sh  start_listener.sh  toggle.sh
src/shellbot2/: __init__.py  agent.py  cli.py  context_compaction.py  daemon.py  event_dispatcher.py  memory_extractor.py  message_history.py  usage_tracker.py
src/shellbot2/subtask/: helpers.py  subtaskrunner.py
src/shellbot2/tools/: __init__.py  botfunctions.py  cal.py  conversationsearchtool.py  docstoretool.py  fastmailtool.py  filesearchtool.py  imagetool.py  memorytool.py  subtasktool.py
src/v3shellbot/: __init__.py  agent.py  cli.py  daemon.py  event_dispatcher.py  message_history.py
src/v3shellbot/tools/: __init__.py  botfunctions.py  cal.py  docstoretool.py  fastmailtool.py  imagetool.py  memorytool.py  util.py
tests/: test_agent.py  test_chat_repl.py  test_dynamic_tool_loading.py  test_usage_tracker.py
