[project]
name = "shellbot2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "brendan", email = "brendanofallon@fastmail.fm" }
]
requires-python = ">=3.12"
dependencies = [
    "gcsa>=2.6.0",
    "mixedbread>=0.45.0",
    "pydantic-ai>=1.44.0",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.9",
    "python-dotenv>=1.2.1",
    "pyzmq>=27.1.0",
    "rank-bm25>=0.2.2",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.54.0",
    "tavily>=1.1.0",
    "trafilatura>=2.0.0",
]

[project.scripts]
shellbot2 = "shellbot2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
